--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "7.*"
+    },
+    "dependencies": {
+        "vue": "^2.6.11"
     }
 }
